add fast freeze/thaw support for Object.wait & aarch64